--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@reduxjs/toolkit": "^1.8.2",
     "babel-loader": "^8.2.5",
+    "crypto": "^1.0.1",
+    "js-sha256": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
