--- a/test/fixtures/favorites.yml
+++ b/test/fixtures/favorites.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: favorites
+#
+#  id           :bigint           not null, primary key
+#  favoriter_id :integer          not null
+#  favorited_id :integer          not null
+#  created_at   :datetime         not null
+#  updated_at   :datetime         not null
+#
 
 one:
   favoriter: 1
