--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: reviews
+#
+#  id                :bigint           not null, primary key
+#  reviewed_hotel_id :integer          not null
+#  reviewer_id       :integer          not null
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#  pros              :text             not null
+#  cons              :text             default("")
+#
 
 one:
   reviewed_hotel_id: 1
